# tiny-model-interp

./: .gitignore  configurator.py  pyproject.toml
.claude/: settings.local.json
analysis/: 10_25.py  10_26.py  __init__.py  char_class_probs.py  char_classes.py  cluster_activations.py  cluster_analysis.py  dim_reduction.py  isa_logits.py  lrp_subspace.py  piecewise_linear.py  polytopes.py  pred_space.py  utils.py  var_explained.py  variance_analysis.py
analysis/common/: char_classes.py  loss.py  masks.py  utils.py
config/: train_shakespeare_char.py  train_web_char.py  train_wiki_char.py
data/fineweb_char/: meta.json  prepare.py
data/shakespeare_char/: prepare.py
data/wiki_char/: prepare.py  test.py
tiny-model/: model.py
tiny_model/: __init__.py  centralizer.py  char_tokenizer.py  lxt.py  lxt_attribution.py  model.py  prune.py  prune_config.py  prune_debug.py  prune_debug11_21.py  run_with_cache.py  train.py
tiny_model/tokenizer/: __init__.py  ascii_normalization.py  char_tokenizer.py
